# home-media-server

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  build-docker-image.sh  docker-compose.yml  extract_subtitles_welcome_to_wrexham_subtitles.sh  qBittorrent.conf  reverse-proxy-setup.md
bazarr/config/: configure-bazarr.sh
bitmagnet/config/: classifier.yml
deleterr/: Dockerfile  README.md  app.py  config.py  pyproject.toml
deleterr/models/: media_item.py
deleterr/services/: base_service.py  jellyfin_service.py  radarr_service.py  sonarr_service.py  webhook_processor.py
deleterr/utils/: parsers.py
radarr/custom-cont-init.d/: install-ffmpeg.sh
searcherr/: .env.example  Dockerfile  Makefile  README.md  app.py  build-docker-image.sh  config.py  pyproject.toml  scheduler.py
searcherr/services/: __init__.py  base_service.py  radarr_service.py  sonarr_service.py
